# caffe

./: .gitignore
examples/cifar10/: cifar10_quick_solver.prototxt  cifar10_quick_train_test.prototxt  train_quick.sh
examples/mnist/: lenet_solver.prototxt  lenet_solver_adam.prototxt  lenet_train_test.prototxt
include/caffe/layers/: random_layer.hpp
src/caffe/layers/: random_layer.cpp
src/caffe/proto/: caffe.proto
tools/patch_extract/: .clang_complete  CMakeLists.txt  Doxyfile.in  helper.cpp  helper.hpp  patch_extract.cpp  random_element.hpp
